<resources>
    <string name="app_name">ChallangeCh4</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>
    <string name="help_pass">Forget password click here</string>
    <string name="config_pass">Repear Password</string>
    <string name="fullname">Full Name</string>
    <string name="btn_register">Register</string>
    <string name="register">REGISTER</string>
    <string name="akun">already have an account?Login Here</string>
    <!-- home -->
    <string name="jadwal">Jadwal</string>
    <!-- schedule -->
    <string name="name">Acara Baru</string>
    <string name="judul">Judul Acara</string>
    <string name="peserta">Tambah Peserta</string>
    <string name="waktu">Atur Waktu</string>
    <string name="pilih">Pilih</string>
    <string name="desk">Deskripsi</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Home -->
    <string name="acara">Buat Acara Baru</string>
    <string name="riwayat">Riwayat Agenda</string>
    <string name="buat">Buat</string>
    <string name="lihat">Lihat</string>
    <string name="edit">Edit</string>
    <string name="hapus">Hapus</string>
    <string name="agenda">Judul Agenda</string>
    <string name="home">Home</string>
</resources>