<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentLogin">

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:padding="30dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/white">
        <ImageView
            android:src="@drawable/binar_pink"
            android:layout_marginTop="8dp"
            android:layout_width="160dp"
            android:layout_height="160dp" />
        <TextView
            android:layout_marginTop="23dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20dp"/>
        <EditText
            android:drawableLeft="@drawable/lock"
            android:inputType="numberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:text="@string/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:backgroundTint="@color/pink"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_pass"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/akun"/>
    </LinearLayout>>

</LinearLayout>