<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentRegister">

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:padding="30dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/white"
        tools:ignore="UselessParent">
        <TextView
            android:layout_marginTop="2dp"
            android:textStyle="bold"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"/>
        <TextView
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fullname"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:inputType="text"
            tools:ignore="LabelFor" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20dp"/>
        <EditText
            android:drawableLeft="@drawable/lock"
            android:inputType="numberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/config_pass"
            android:textColor="@color/black"
            android:textSize="20dp"/>
        <EditText
            android:drawableLeft="@drawable/lock"
            android:inputType="numberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:text="@string/btn_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:backgroundTint="@color/pink"/>
    </LinearLayout>>

</LinearLayout>