<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="44dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/grey">

        <TextView
            android:layout_marginTop="40dp"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agenda"
            android:textSize="20dp"/>
        <Button
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hapus"
            android:background="@null"
            android:backgroundTint="@color/crimson"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:backgroundTint="@color/teal_200"
            android:text="@string/edit" />

</LinearLayout>