<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentScheduler">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@color/pink">

        <ImageView
            android:background="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_marginStart="120dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textSize="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_marginLeft="44dp"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:background="@color/grey">

            <TextView
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acara"
                android:textSize="16dp"/>
            <Button
                android:layout_marginLeft="24dp"
                android:layout_gravity="right"
                android:layout_marginRight="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buat"
                android:background="@null"
                android:backgroundTint="@color/pink"/>

        </LinearLayout>

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/reycycleview"
        tools:listitem="@layout/layout_agenda"/>
</LinearLayout>

